<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_n_circle"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_opinion"
            android:icon="@drawable/ic_o_circle"
            android:title="@string/opinion" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_s_circle"
            android:title="@string/sport" />

        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_c_circle"
            android:title="@string/culture" />

        <item
            android:id="@+id/nav_life_style"
            android:icon="@drawable/ic_l_circle"
            android:title="@string/life_style" />

    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />

    </group>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_color"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
